# fleet_adapter_mir

./: MiR-100-hardware-setup.md  README.md  main.py  mir_config.yaml  package.xml  setup.py
configs/: mir_config.yaml  mirfm_config.yaml  nav_graph.yaml
docs/: mir_actions.md  mir_missions.md
fleet_adapter_mir/: MiRClientAPI.py  MiRCommandHandle.py  README.md  __init__.py  fleet_adapter_mir.py  package.xml  setup.cfg  setup.py
fleet_adapter_mir/fleet_adapter_mir/: MiRClientAPI.py  MiRCommandHandle.py  __init__.py  fleet_adapter_mir.py  mir_action.py  mir_api.py  rmf_cart_delivery.py  rmf_cart_missions.json  robot_adapter_mir.py
fleet_adapter_mir_actions/: package.xml  setup.cfg  setup.py
fleet_adapter_mir_actions/fleet_adapter_mir_actions/: mir_action.py  rmf_cart_delivery.py  rmf_cart_detection.py  rmf_move_off.py  rmf_move_off_on_alert.py  rmf_wait_until.py  test_rmf_cart_detection.py
fleet_adapter_mir_tasks/: package.xml  setup.cfg  setup.py
fleet_adapter_mir_tasks/fleet_adapter_mir_tasks/: dispatch_delivery.py  dispatch_multistop.py  dispatch_pickup.py  dispatch_wait_until.py
fleet_adapter_mirfm/: README.md  package.xml  setup.cfg  setup.py
fleet_adapter_mirfm/fleet_adapter_mirfm/: MiRFleetClientAPI.py  MiRFleetCommandHandle.py  config.py  fleet_adapter_mirfm.py
mir_fleet_client/: .gitlab-ci.yml  .travis.yml  README.md  fix_openapi.py  generate.sh  openapi.yaml  openapi_config.yaml  setup.py  tox.ini
mir_fleet_client/.openapi-generator/: FILES
mir_fleet_client/docs/: ActionDefinitionsApi.md  (+314 more)
missions/: rmf_cart_missions.json  rmf_missions.json
(+641 files in other folders)
